chnage done in html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </div>
 </div>
     <div id="btn">
-        <button class="button" onclick="done()">PLACE ORDER</button>
+        <button class="button" onclick="done()">Place order</button>
         <input type="reset" class="button" >
         <br>
         <input type="submit" class="button" id="place">
